--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="/logo.svg" rel="icon">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>MOJ - 莫莫在线评测系统</title>
+    <title>KZOJ</title>
   </head>
   <body>
     <div id="app"></div>
